[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unreal_helpers"
version = "0.1.0"
description = "A collection of Python utilities for Unreal Engine 5.5"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "coverage>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "coverage>=7.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
# Allow star imports in test files since they use existing conventions
select = ["E", "F", "W"]
ignore = [
    "F403",  # Star imports
    "F405",  # May be undefined from star imports
    "E501",  # Line too long (handled by line-length)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401"]  # Unused imports in test files
